# state_prep_tools

./: .gitignore  README.md  circuit.py  exact_sim.py  gate.py  misc.py  pyproject.toml  test_gate.py
find_gs/: XX.py  check_delta.py
find_unitary/: README.md  find_hard.py  readout_fermionic_circuit.py
jax/: __init__.py  numpy.py
jax/scipy/: __init__.py  linalg.py
stateprep/: __init__.py  algorithm.py  circuit.py  exact_sim.py  gate.py
stateprep/find_gs/: XX.py  check_delta.py  test_gradient.py
stateprep/find_unitary/: find_hard.py  find_sd.py  find_simply.py  plot.py  readout_fermionic_circuit.py
stateprep/new_example/: JW.py  decomposition.py  find_ff.py  readout_fermionic_circuit.py
stateprep/new_example/U2.5_sd/: hubbard_model.py
stateprep/new_example/U8_sd/: hubbard_model.py  readout_XXZ.py
stateprep/utils/: __init__.py  common_setup.py  misc.py  pauli_decomposition.py  unitary_decomposition.py
test/: circuit_sequence_depth1.pickle  readout_fermionic_circuit.py  test_algorithm.py  test_circuit.py  test_gate.py
utils/: misc.py
